<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_me"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/profile_about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/about" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/dark"
            android:text="@string/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/dark"
            android:text="@string/email" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/deskripsidiri" />


</LinearLayout>