<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deskripsi_destinasi"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeskripsiDestinasi">

    <TextView
        android:id="@+id/nama_destinasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/nama_dest" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="wrap_content"
        android:id="@+id/foto"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/bukit_merese"
        />

    <TextView
        android:id="@+id/loc_destinasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/lokasi" />

    <TextView
        android:id="@+id/desk_destinasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:textSize="15sp"
        android:text="@string/deskripsi" />

</LinearLayout>