<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:id="@+id/destinationlist">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            tools:text="@string/nama_destinasi" />
        <TextView
            android:id="@+id/tv_item_lokasi"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            tools:text="@string/lokasi" />
        <TextView
            android:id="@+id/tv_item_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/details" />

    </LinearLayout>

</RelativeLayout>